# orange-substrate-bot

./: Cargo.toml  README.md  docker-compose.yml  script.toml
src/: admin.rs  buttons.rs  command.rs  commands.rs  dialogues.rs  dispatching_feautures.rs  main.rs  purchase.rs  replies.rs  shared_state.rs  transfer.rs
